--- a/improvisation.html
+++ b/improvisation.html
@@ -25,7 +25,7 @@
   <main class="page-content">
     <h2>Mad World</h2>
     <audio controls style="width:100%; margin: 1rem 0;">
-      <source src="https://www.martinzamorano.com/system/files/30267/original/Mad_World_Mix_14._Juli_2025.wav" type="audio/wav" />
+      <source src="assets/audio/Mad_World_Mix_14._Juli_2025.wav" type="audio/wav" />
       <span data-i18n="site.no_audio">Ihr Browser unterstützt kein Audio-Element.</span>
     </audio>
 
