--- a/en/vita.html
+++ b/en/vita.html
@@ -54,13 +54,13 @@
 
     <h2>Current Curriculum + Press Kit</h2>
     <div class="file-links">
-      <a href="https://www.martinzamorano.com/system/files/30213/original/VITA_(DEU)_25_short_and_long.pdf" target="_blank">VITA (DEU) 2025 — Short and Long (PDF)</a>
-      <a href="https://www.martinzamorano.com/system/files/30214/original/VITA_(ENG)_25_short_and_long.pdf" target="_blank">VITA (ENG) 2025 — Short and Long (PDF)</a>
-      <a href="https://www.martinzamorano.com/system/files/30215/original/VITA_(ESP)_25_short_and_long.pdf" target="_blank">VITA (ESP) 2025 — Corta y Larga (PDF)</a>
-      <a href="https://www.martinzamorano.com/system/files/25417/original/K%C3%BCnstlerfoto_1_(3).JPG" target="_blank">Zamorano 1 (Credit: Alan Finlay)</a>
-      <a href="https://www.martinzamorano.com/system/files/25418/original/Martin_sel_-_9_of_21.jpg" target="_blank">Zamorano 2 (Credit: Alan Finlay)</a>
-      <a href="https://www.martinzamorano.com/system/files/25420/original/Martin_sel_-_10_of_21_(niedrieger_aufl%C3%B6sung).png" target="_blank">Zamorano 4 (Credit: Alan Finlay)</a>
-      <a href="https://www.martinzamorano.com/system/files/27022/original/IMG_3796.jpg" target="_blank">Zamorano 5 (Credit: Lukas Palatinus)</a>
+      <a href="../assets/pdfs/VITA_DEU_25_short_and_long.pdf" target="_blank">VITA (DEU) 2025 — Short and Long (PDF)</a>
+      <a href="../assets/pdfs/VITA_ENG_25_short_and_long.pdf" target="_blank">VITA (ENG) 2025 — Short and Long (PDF)</a>
+      <a href="../assets/pdfs/VITA_ESP_25_short_and_long.pdf" target="_blank">VITA (ESP) 2025 — Corta y Larga (PDF)</a>
+      <a href="../assets/images/Kuenstlerfoto_1.jpg" target="_blank">Zamorano 1 (Credit: Alan Finlay)</a>
+      <a href="../assets/images/Martin_sel_9_of_21.jpg" target="_blank">Zamorano 2 (Credit: Alan Finlay)</a>
+      <a href="../assets/images/Martin_sel_10_of_21.png" target="_blank">Zamorano 4 (Credit: Alan Finlay)</a>
+      <a href="../assets/images/IMG_3796.jpg" target="_blank">Zamorano 5 (Credit: Lukas Palatinus)</a>
     </div>
   </main>
 
