compress large files

--- a/en/healing.html
+++ b/en/healing.html
@@ -26,8 +26,8 @@
     <p>These five images are the visual component of the interdisciplinary project "Five Stages of Healing" on the theme of emotional healing. The starting point is the end of a romantic relationship and the exploration of the five stages of grief, based on Elisabeth Kübler-Ross's model, which I adapted to the process of heartbreak. While analysing my own thoughts and emotions during this time, an internal artistic dialogue emerged, combining poetry, painting, and music. The five images that resulted from this process serve as emotional material for the musical improvisation, reflecting the chaotic and cyclical nature of healing. They invite both the participating musicians and the audience to reflect on their own experiences of loss and acceptance.</p>
 
     <div class="file-links">
-      <a href="../assets/audio/Fast_Mix_Liebeshummer_II.wav" target="_blank">Audio: Fast Mix Liebeshummer II (WAV)</a>
-      <a href="../assets/audio/Fast_Mix_Liebeshummer_I.wav" target="_blank">Audio: Fast Mix Liebeshummer I (WAV)</a>
+      <a href="../assets/audio/Fast_Mix_Liebeshummer_II.mp3" target="_blank">Audio: Fast Mix Liebeshummer II (MP3)</a>
+      <a href="../assets/audio/Fast_Mix_Liebeshummer_I.mp3" target="_blank">Audio: Fast Mix Liebeshummer I (MP3)</a>
     </div>
 
     <div class="healing-stage">
