--- a/es/improvisation.html
+++ b/es/improvisation.html
@@ -25,7 +25,7 @@
   <main class="page-content">
     <h2>Mad World</h2>
     <audio controls style="width:100%; margin: 1rem 0;">
-      <source src="../assets/audio/Mad_World_Mix_14._Juli_2025.wav" type="audio/wav" />
+      <source src="../assets/audio/Mad_World_Mix_14._Juli_2025.mp3" type="audio/mpeg" />
       Tu navegador no soporta el elemento de audio.
     </audio>
 
