--- a/healing.html
+++ b/healing.html
@@ -26,8 +26,8 @@
     <p data-i18n="healing.intro">Diese fünf Bilder sind der grafische Teil des interdisziplinären Kunstwerks „Five Stages of Healing" zum Thema „Emotionales Heilen". Ausgangspunkt ist die Auseinandersetzung mit den fünf Phasen der Trauer nach dem Modell von Elisabeth Kübler-Ross und die künstlerische Übertragung dieser psychologischen Theorie auf den Prozess des Liebeskummers. Daraus entsteht ein innerer künstlerischer Dialog, der Dichtung, Malerei und Musik miteinander verbindet. Die fünf Bilder, die aus dem emotionalen Prozess hervorgehen und als emotionales Material für die musikalische Improvisation dienen, spiegeln die chaotische und zyklische Natur des Heilens wider und schildern zugleich die wesentlichen Aspekte jeder Phase des Prozesses. Sie laden sowohl die mitwirkenden Musiker:innen als auch das Publikum dazu ein, eigene Erfahrungen von Verlust und Akzeptanz zu reflektieren.</p>
 
     <div class="file-links">
-      <a href="assets/audio/Fast_Mix_Liebeshummer_II.wav" target="_blank">Audio: Fast Mix Liebeshummer II (WAV)</a>
-      <a href="assets/audio/Fast_Mix_Liebeshummer_I.wav" target="_blank">Audio: Fast Mix Liebeshummer I (WAV)</a>
+      <a href="assets/audio/Fast_Mix_Liebeshummer_II.mp3" target="_blank">Audio: Fast Mix Liebeshummer II (MP3)</a>
+      <a href="assets/audio/Fast_Mix_Liebeshummer_I.mp3" target="_blank">Audio: Fast Mix Liebeshummer I (MP3)</a>
     </div>
 
     <div class="healing-stage">
