fix contact form i18n keys and German intro text

--- a/kontakt.html
+++ b/kontakt.html
@@ -11,29 +11,29 @@
 
   <main class="page-content">
     <h2 data-i18n="kontakt.h2">Kontakt</h2>
-    <p data-i18n="kontakt.intro">Si quieres contactarme mándame un email, rellenando el formulario de abajo.</p>
+    <p data-i18n="kontakt.intro">Wenn du Kontakt aufnehmen möchtest, schreib mir eine E-Mail über das untenstehende Formular.</p>
 
-    <form class="contact-form" action="https://formspree.io/f/placeholder" method="POST">
+    <form class="contact-form" action="https://formspree.io/f/xreayqon" method="POST">
       <label>
-        <span data-i18n="kontakt.form.name">Ihr Name</span> *
+        <span data-i18n="kontakt.name">Ihr Name</span> *
         <input type="text" name="name" required />
       </label>
       <label>
-        <span data-i18n="kontakt.form.phone">Telefon</span>
+        <span data-i18n="kontakt.phone">Telefon</span>
         <input type="tel" name="telefon" />
       </label>
       <label>
-        <span data-i18n="kontakt.form.email">Email</span> *
+        <span data-i18n="kontakt.email">Email</span> *
         <input type="email" name="email" required />
       </label>
       <label>
-        <span data-i18n="kontakt.form.message">Ihre Nachricht</span> *
+        <span data-i18n="kontakt.message">Ihre Nachricht</span> *
         <textarea name="message" required></textarea>
       </label>
       <label style="display:none;">
         <input type="text" name="_gotcha" tabindex="-1" autocomplete="off" />
       </label>
-      <button type="submit" data-i18n="kontakt.form.submit">Absenden</button>
+      <button type="submit" data-i18n="kontakt.submit">Absenden</button>
     </form>
   </main>
 
