fix translations & hottest album

--- a/slap.html
+++ b/slap.html
@@ -9,12 +9,12 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>Slap-O-Mat-in</h1>
+            <h1 data-i18n="slap.h1">Slap-O-Mat-in</h1>
             <a href="index.html" class="back-button">← Back to Home</a>
         </div>
 
         <div class="slap-counter">
-            <p>Ausgeteilte Schellen: <span id="slapCount">0</span></p>
+            <h1 data-i18n="slap.counter"><p>Ausgeteilte Schellen: </h1><span id="slapCount">0</span></p>
         </div>
 
         <div class="martin-container">
@@ -23,5 +23,9 @@
     </div>
 
     <script src="slap-script.js"></script>
+    <script src="assets/i18n/de.js"></script>
+    <script src="assets/i18n/en.js"></script>
+    <script src="assets/i18n/es.js"></script>
+    <script src="assets/nav.js"></script>
 </body>
 </html>
