fix some files & bandcamp integration

--- a/index.html
+++ b/index.html
@@ -42,6 +42,20 @@
       </div>
     </div>
 
+    <section class="home-album">
+      <p class="home-album-eyebrow" data-i18n="home.album.eyebrow">Jetzt verfügbar</p>
+      <div class="home-album-inner">
+        <a class="home-album-cover" href="https://martinzamorano.bandcamp.com/album/pre-apocalyptic-anti-cynical-post-postmodernist-piano-jukebox" target="_blank" rel="noopener">
+          <img src="assets/images/a3363914671_10.jpg" alt="Pre-Apocalyptic Anti-Cynical Post-Postmodernist Piano Jukebox" />
+        </a>
+        <div class="home-album-info">
+          <h2 class="home-album-title">Pre-Apocalyptic Anti-Cynical Post-Postmodernist Piano Jukebox</h2>
+          <p class="home-album-desc" data-i18n="home.album.desc">Das neue Album von Martín Zamorano — jetzt auf Bandcamp zum Streamen und Download.</p>
+          <a class="home-album-cta" href="https://martinzamorano.bandcamp.com/album/pre-apocalyptic-anti-cynical-post-postmodernist-piano-jukebox" target="_blank" rel="noopener" data-i18n="home.album.cta">Auf Bandcamp anhören →</a>
+        </div>
+      </div>
+    </section>
+
     <section class="home-shows">
       <h2 data-i18n="home.shows.title">Nächste Shows</h2>
       <div id="home-shows-list">
