--- a/mental-pocus-records.html
+++ b/mental-pocus-records.html
@@ -23,26 +23,22 @@
   <header></header>
 
   <main class="page-content">
-    <p>Mental Pocus Records is a collaborative space for explorative music, improvisation, sonic poetry and a bit of weird magic. The label is based in Hamburg (Germany) and is curated by Danica Hobden and Martín Zamorano.</p>
+    <p data-i18n="mpr.p1">Mental Pocus Records is a collaborative space for explorative music, improvisation, sonic poetry and a bit of weird magic. The label is based in Hamburg (Germany) and is curated by Danica Hobden and Martín Zamorano.</p>
 
-    <p>The philosophy behind our idea is simple:</p>
+    <p data-i18n="mpr.p2">The philosophy behind our idea is simple:</p>
     <ul>
-      <li>Create a musical space in Hamburg and Germany for young artists that work within the realms of improvised art, regardless of genre, form or language.</li>
-      <li>Connect improvisation artists within Hamburg and Europe.</li>
-      <li>Share music independently of the financial agendas of the so-called "music industry".</li>
+      <li data-i18n="mpr.li1">Create a musical space in Hamburg and Germany for young artists that work within the realms of improvised art, regardless of genre, form or language.</li>
+      <li data-i18n="mpr.li2">Connect improvisation artists within Hamburg and Europe.</li>
+      <li data-i18n="mpr.li3">Share music independently of the financial agendas of the so-called "music industry".</li>
     </ul>
 
-    <p>Here are some of the latest releases. For more, visit us on <a href="https://mentalpocusrecords.bandcamp.com/" target="_blank" rel="noopener">Bandcamp</a> or <a href="https://www.instagram.com/mentalpocusrecords/" target="_blank" rel="noopener">Instagram</a>.</p>
+    <p data-i18n="mpr.p3">Here are some of the latest releases. For more, visit us on <a href="https://mentalpocusrecords.bandcamp.com/" target="_blank" rel="noopener">Bandcamp</a> or <a href="https://www.instagram.com/mentalpocusrecords/" target="_blank" rel="noopener">Instagram</a>.</p>
 
     <hr style="border-color: var(--border); margin: 2rem 0;" />
 
     <h3>Fragments of Spirit Vol. I — ECOllective enSEMBLE</h3>
-    <div class="bandcamp-embed" style="width:100%;">
-      <iframe style="border: 0; width: 100%; height: 120px;"
-        src="https://bandcamp.com/EmbeddedPlayer/album=2050547824/size=large/bgcol=111111/linkcol=c8a97e/tracklist=false/artwork=small/transparent=true/"
-        seamless>
-        <a href="https://mentalpocusrecords.bandcamp.com/" target="_blank" rel="noopener">Mental Pocus Records on Bandcamp</a>
-      </iframe>
+    <div class="bandcamp-embed">
+      <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=1849331253/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://mentalpocusrecords.bandcamp.com/album/fragments-of-spirit-vol-i">Fragments of Spirit Vol. I by ECOllective enSEMBLE</a></iframe>
     </div>
 
     <div class="home-links" style="margin-top:2rem;">
