--- a/musik.html
+++ b/musik.html
@@ -24,12 +24,35 @@
 
   <main class="page-content">
     <h2>Solo Piano</h2>
+
+    <section class="home-album">
+      <p class="home-album-eyebrow" data-i18n="home.album.eyebrow">Jetzt verfügbar</p>
+      <div class="home-album-inner">
+        <a class="home-album-cover" href="https://martinzamorano.bandcamp.com/album/pre-apocalyptic-anti-cynical-post-postmodernist-piano-jukebox" target="_blank" rel="noopener">
+          <img src="assets/images/a3363914671_10.jpg" alt="Pre-Apocalyptic Anti-Cynical Post-Postmodernist Piano Jukebox" />
+        </a>
+        <div class="home-album-info">
+          <h2 class="home-album-title">Pre-Apocalyptic Anti-Cynical Post-Postmodernist Piano Jukebox</h2>
+          <p class="home-album-desc" data-i18n="home.album.desc">Das neue Album — jetzt auf Bandcamp zum Streamen und Download.</p>
+          <a class="home-album-cta" href="https://martinzamorano.bandcamp.com/album/pre-apocalyptic-anti-cynical-post-postmodernist-piano-jukebox" target="_blank" rel="noopener" data-i18n="home.album.cta">Auf Bandcamp anhören →</a>
+        </div>
+      </div>
+    </section>
+
+    <h3>From the Jazzhall (live)</h3>
+    <div class="bandcamp-embed">
+      <iframe style="border: 0; width: 400px; height: 340px;" src="https://bandcamp.com/EmbeddedPlayer/album=1212026354/size=large/bgcol=333333/linkcol=e99708/artwork=small/transparent=true/" seamless><a href="https://martinzamorano.bandcamp.com/album/from-the-jazzhall-live">From the Jazzhall (Live) by Martin Zamorano</a></iframe>
+    </div>
+
+
     <div class="video-embed">
       <iframe src="https://www.youtube-nocookie.com/embed/CBdmE6M_myM?rel=0" allowfullscreen loading="lazy"></iframe>
     </div>
     <div class="video-embed">
       <iframe src="https://www.youtube-nocookie.com/embed/wVW6wtoHxEM?rel=0" allowfullscreen loading="lazy"></iframe>
     </div>
+
+    <h3>Klangmanufaktur Sessions (live)</h3>
     <div class="video-embed">
       <iframe src="https://www.youtube-nocookie.com/embed/o40blnJaeow?rel=0" allowfullscreen loading="lazy"></iframe>
     </div>
@@ -42,13 +65,14 @@
     <div class="video-embed">
       <iframe src="https://www.youtube-nocookie.com/embed/_aA9-7tpLVs?rel=0" allowfullscreen loading="lazy"></iframe>
     </div>
+
+    <h3>Two Suites for Keys</h3>
     <div class="bandcamp-embed">
-      <iframe src="https://bandcamp.com/EmbeddedPlayer/album=1093877222/size=large/bgcol=111111/linkcol=ffffff/minimal=true/transparent=true/" seamless>Suite for Keys II by Martin Zamorano</iframe>
+      <iframe style="border: 0; width: 400px; height: 373px;" src="https://bandcamp.com/EmbeddedPlayer/album=1093877222/size=large/bgcol=333333/linkcol=e99708/artwork=small/transparent=true/" seamless><a href="https://martinzamorano.bandcamp.com/album/suite-for-keys-ii">Suite for Keys II by Martin Zamorano</a></iframe>
     </div>
     <div class="bandcamp-embed">
-      <iframe src="https://bandcamp.com/EmbeddedPlayer/album=300092296/size=large/bgcol=111111/linkcol=ffffff/minimal=true/transparent=true/" seamless>Suite for Keys by Martin Zamorano</iframe>
+      <iframe style="border: 0; width: 400px; height: 340px;" src="https://bandcamp.com/EmbeddedPlayer/album=300092296/size=large/bgcol=333333/linkcol=e99708/artwork=small/transparent=true/" seamless><a href="https://martinzamorano.bandcamp.com/album/suite-for-keys">Suite for Keys by Martin Zamorano</a></iframe>
     </div>
-  
   </main>
 
   <footer>
