--- a/musiktheorie.html
+++ b/musiktheorie.html
@@ -23,14 +23,41 @@
   <header></header>
 
   <main class="page-content">
-    <p data-i18n="musiktheorie.p1">Musiktheorie und Kontrapunkt sind für mich keine trockenen Regeln, sondern lebendige Werkzeuge, um Musik tiefer zu verstehen und zu gestalten. Seit 2021 lehre ich an der Hochschule für Musik Lübeck, seit 2023 an der Staatlichen Jugendmusikschule Hamburg.</p>
-    <p data-i18n="musiktheorie.p2">Ich biete auch Einzelunterricht in Musiktheorie, Kontrapunkt und Gehörbildung an – für alle Niveaus, von Anfängern bis zu fortgeschrittenen Studierenden.</p>
-    <p data-i18n="musiktheorie.p3">Wenn du Interesse an einem Unterrichtsgespräch hast, <a href="kontakt.html">melde dich gern bei mir</a>.</p>
 
-    <h2 data-i18n="musiktheorie.resources.h2">Lernmaterialien</h2>
+    <h2 data-i18n="mt.thesis1.h2">Improvisation als ornamentale Schicht über einem harmonischen Gerüst: Parallelen zwischen der Alten Musik und Jazz (2025)</h2>
+    <p data-i18n="mt.thesis1.sub" style="color:var(--text-muted);font-size:.85rem;margin-top:-.5rem;">Masterarbeit (Dr. Langner Jazzmaster 2022–2025)</p>
     <div class="file-links">
-      <a href="assets/files/Kontrapunkt_Skript.pdf" target="_blank" data-i18n="musiktheorie.pdf1">Kontrapunkt-Skript (PDF)</a>
+      <a href="assets/pdfs/Flesh_and_Bones_Masterarbeit.pdf" target="_blank" data-i18n="mt.thesis1.link">Flesh &amp; Bones — Masterarbeit (PDF)</a>
     </div>
+
+    <h2 data-i18n="mt.suite.h2">Suite in Baroque Style Over the Jazz Standard "Alone Together"</h2>
+    <div class="file-links">
+      <a href="assets/pdfs/Suite_Alone_Together.pdf" target="_blank" data-i18n="mt.suite.link">Suite "Alone Together" — Partitur (PDF)</a>
+    </div>
+
+    <h2 data-i18n="mt.thesis2.h2">Negative Harmony, Verbindungen zwischen Jazztheorie und klassischer Musiktheorie (2022)</h2>
+    <div class="file-links">
+      <a href="assets/pdfs/Negative_Harmony_Masterarbeit.pdf" target="_blank" data-i18n="mt.thesis2.link">Negative Harmony — Masterarbeit (PDF)</a>
+    </div>
+
+    <h2 data-i18n="mt.concerto.h2">Concerto Grosso im Stile von Muffat</h2>
+    <p data-i18n="mt.concerto.sub" style="color:var(--text-muted);font-size:.85rem;margin-top:-.5rem;">Gespielt vom Ensemble Kairos</p>
+    <audio controls style="width:100%;max-width:520px;margin:1rem 0;accent-color:var(--accent);">
+      <source src="assets/audio/Concerto_Grosso.mp3" type="audio/mpeg" />
+    </audio>
+    <div class="file-links">
+      <a href="assets/pdfs/Concerto_Grosso_Partitur.pdf" target="_blank" data-i18n="mt.concerto.link">Partitur Concerto Grosso (PDF)</a>
+    </div>
+
+    <h2 data-i18n="mt.various.h2">Verschiedene stilgetreue Kompositionen und Kontrapunktarbeiten</h2>
+    <div class="file-links">
+      <a href="assets/pdfs/Praeludium_und_Fuge_C.pdf" target="_blank" data-i18n="mt.prelude.link">Präludium und Fuge in C (PDF)</a>
+      <a href="assets/pdfs/Fuge_Kunst_der_Fuge.pdf" target="_blank" data-i18n="mt.fugue.link">Fuge über das Thema der Kunst der Fuge (PDF)</a>
+      <a href="assets/pdfs/Sonata_klassisch_Satz1.pdf" target="_blank" data-i18n="mt.sonata1.link">Sonata in klassischem Stil — 1. Satz (PDF)</a>
+      <a href="assets/pdfs/Sonata_klassisch_Satz2.pdf" target="_blank" data-i18n="mt.sonata2.link">Sonata in klassischem Stil — 2. Satz (PDF)</a>
+      <a href="assets/pdfs/Sonata_klassisch_Satz3.pdf" target="_blank" data-i18n="mt.sonata3.link">Sonata in klassischem Stil — 3. Satz (PDF)</a>
+    </div>
+
   </main>
 
   <footer>
