--- a/zamoranoandstamer.html
+++ b/zamoranoandstamer.html
@@ -30,8 +30,8 @@
     <img src="assets/images/FIN_0295.jpg" alt="Zamorano &amp; Stamer — Foto: Nils Jöhnk" style="margin: 2rem 0; border: 1px solid #2a2a2a;" />
 
     <div class="file-links">
-      <a href="assets/pdfs/Zamorano_Stamer_DEUTSCH_Presskit.pdf" target="_blank" data-i18n="zas.pdf.de">DEUTSCH Press Kit Zamorano&amp;Stamer (PDF)</a>
-      <a href="assets/pdfs/Zamorano_Stamer_ENGLISH_Press_kit.pdf" target="_blank" data-i18n="zas.pdf.en">ENGLISH Press Kit Zamorano&amp;Stamer (PDF)</a>
+      <a href="assets/pdfs/Zamorano_Stamer_DEUTSCH_Presskit.pdf" target="_blank" data-i18n="zas.presskit.de">DEUTSCH Press Kit Zamorano&amp;Stamer (PDF)</a>
+      <a href="assets/pdfs/Zamorano_Stamer_ENGLISH_Press_kit.pdf" target="_blank" data-i18n="zas.presskit.en">ENGLISH Press Kit Zamorano&amp;Stamer (PDF)</a>
     </div>
   </main>
 
