--- a/vita.html
+++ b/vita.html
@@ -38,7 +38,7 @@
 
     <div style="clear:both"></div>
 
-    <div class="gallery">
+    <div class="gallery" id="vita-gallery">
       <a href="assets/images/465449436_9404329929594584_3540499126917132473_n.jpg"><img src="assets/images/465449436_9404329929594584_3540499126917132473_n.jpg" alt="Foto: Nils Jöhnk" /></a>
       <a href="assets/images/Kuenstlerfoto_1_-3-.JPG"><img src="assets/images/Kuenstlerfoto_1_-3-.JPG" alt="Foto: Alan Finlay" /></a>
       <a href="assets/images/464905209_9404329619594615_2878854906070236741_n.jpg"><img src="assets/images/464905209_9404329619594615_2878854906070236741_n.jpg" alt="Foto: Nils Jöhnk" /></a>
@@ -51,6 +51,8 @@
       <a href="assets/images/IMG_3880.jpg"><img src="assets/images/IMG_3880.jpg" alt="Foto: Lukas Palatinus" /></a>
       <a href="assets/images/IMG_3769.jpg"><img src="assets/images/IMG_3769.jpg" alt="Foto: Lukas Palatinus" /></a>
     </div>
+
+    <div id="vita-team-section"></div>
 
     <h2 data-i18n="vita.presskit.h2">Current Curriculum + Press Kit</h2>
     <div class="file-links">
